Add notification sound that plays when timer ends

--- a/app/index.html
+++ b/app/index.html
@@ -15,5 +15,6 @@
   <body>
     <script src="assets/vendor.js"></script>
     <script src="assets/mob-timer.js"></script>
+    <audio src="music_box.mp3" preload="auto" class="notification"></audio>
   </body>
 </html>
