--- a/app/index.html
+++ b/app/index.html
@@ -16,5 +16,6 @@
     <script src="assets/vendor.js"></script>
     <script src="assets/mob-timer.js"></script>
     <audio src="music_box.mp3" preload="auto" class="notification"></audio>
+    <div class="overlay"></div>
   </body>
 </html>
