--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,10 @@
   <body>
     <script src="assets/vendor.js"></script>
     <script src="assets/mob-timer.js"></script>
-    <audio src="music_box.mp3" preload="auto" class="notification"></audio>
     <div class="overlay"></div>
+    <audio class="notification">
+      <source src="music_box.mp3" type="audio/mpeg">
+      <source src="music_box.wav" type="audio/wav">
+    </audio>
   </body>
 </html>
