Update ember cli to version 0.1.2

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/mob-timer.css">
   </head>
   <body>
+    {{content-for 'body'}}
+
     <script src="assets/vendor.js"></script>
     <script src="assets/mob-timer.js"></script>
     <div class="overlay"></div>
